--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -5,3 +5,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # Otherwise forward the request to index.php
 RewriteRule . index.php
 
+<IfModule dir_module>
+DirectoryIndex index.html index.php
+</IfModule>
