--- a/backend/web/.htaccess
+++ b/backend/web/.htaccess
@@ -4,4 +4,6 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # Otherwise forward the request to index.php
 RewriteRule . index.php
-
+<IfModule dir_module>
+DirectoryIndex index.html index.php
+</IfModule>
